# usagi-welcome

./: README.md  meson.build  page.fuwa.welcome.json  page.fuwa.welcome.json~
data/: meson.build  page.fuwa.welcome.desktop.in  page.fuwa.welcome.gschema.xml  page.fuwa.welcome.metainfo.xml.in  page.fuwa.welcome.service.in
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: application.vala  main.vala  meson.build  welcome.gresource  welcome.gresource.xml  window.blp  window.ui  window.vala
